--- a/html/login.html
+++ b/html/login.html
@@ -1,6 +1,6 @@
 <!--User login form-->
 <div class="error" id="error"></div>
-<script>
+<script>/*
   // This is called with the results from from FB.getLoginStatus().
   function statusChangeCallback(response) {
     console.log('statusChangeCallback');
@@ -11,16 +11,15 @@
     // for FB.getLoginStatus().
     if (response.status === 'connected') {
       // Logged into your app and Facebook.
-      //testAPI();
-      fb_login();
+      testAPI();
     } else if (response.status === 'not_authorized') {
       // The person is logged into Facebook, but not your app.
-      document.getElementById('status').innerHTML = 'Please log ' +
+      document.getElementById('error').innerHTML = 'Please log ' +
         'into this app.';
     } else {
       // The person is not logged into Facebook, so we're not sure if
       // they are logged into this app or not.
-      document.getElementById('status').innerHTML = 'Please log ' +
+      document.getElementById('error').innerHTML = 'Please log ' +
         'into Facebook.';
     }
   }
@@ -76,10 +75,10 @@
     console.log('Welcome!  Fetching your information.... ');
     FB.api('/me', function(response) {
       console.log('Successful login for: ' + response.name);
-      document.getElementById('status').innerHTML =
-        'Thanks for logging in, ' + response.name + 'at' + response.email +'!';
+      document.getElementById('fblogincheck').innerHTML =
+        'Logged in as ' + response.name + ' on Facebook';
     });
-  }
+  }*/
 </script>
 <form name="login_form" id="login_form" action="users/login" method="POST"
 onsubmit="return validate_login(event);">
@@ -96,8 +95,7 @@ onsubmit="return validate_login(event);">
 	<input type="submit" name="submit_button" value="Login">
 	
 	<!--FB Login Button-->
-	<button type="button" onclick="fb_login();">Sign in with Facebook</button>
-	<fb:login-button scope="public_profile,email" onlogin="checkLoginState();">
+	<fb:login-button scope="public_profile" onlogin="checkLoginState();" auto-logout-link="true">
 	</fb:login-button>
 	
 	<div id="status">
